# genetics_world

./: CMakeLists.txt  README.md
include/: genetics_world.h.in  gw_behavior_factory.h  gw_behavior_reproduction.h  gw_creature.h  gw_creature_tracker.h  gw_driver.h  gw_sense_energy.h  gw_sense_factory.h  gw_world.h
src/: CMakeLists.txt  gw_behavior_factory.cpp  gw_behavior_reproduction.cpp  gw_creature.cpp  gw_creature_tracker.cpp  gw_sense_energy.cpp  gw_sense_factory.cpp  main.cpp
